git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@826 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
@@ -41,13 +41,19 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="150">Tipo&nbsp;de&nbsp;producto</td>
+				<td width="80">Folio</td>
+				<td width="10"></td>
+				<td width="170">Almacen&nbsp;Origen</td>
 				<td width="10"></td>
 				<td width="100">C&oacute;digo</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td width="200">Descripci&oacute;n</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="150">Presentaci&oacute;n</td>
+				<td width="130">Presentaci&oacute;n&nbsp;Origen</td>
+				<td width="10"></td>
+				<td width="180">Empleado</td>
+				<td width="10"></td>
+				<td width="90">Estado</td>
 				<td width="20"></td>
 				<td></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -57,9 +63,11 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="150">
-					<select name="busqueda_select_tipo_prod" style="width:150px;">
-						<option value="0">[--Seleccionar Tipo--]</option>
+				<td width="80"><input type="text" name="busqueda_folio" style="width:80px;"></td>
+				<td width="10"></td>
+				<td width="170">
+					<select name="busqueda_select_alm_origen" style="width:170px;">
+						<option value="0">[--Seleccionar Almacen--]</option>
 					</select>
 				</td>
 				<td width="10"></td>
@@ -67,9 +75,21 @@
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><input type="text" name="busqueda_descripcion" style="width:200px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="150">
-					<select name="busqueda_select_pres" style="width:150px;">
+				<td width="130">
+					<select name="busqueda_select_pres" style="width:130px;">
 						<option value="0" selected="yes">[--Presentaci&oacute;n--]</option>
+					</select>
+				</td>
+				<td width="10"></td>
+				<td width="180">
+					<select name="busqueda_select_empleado" style="width:180px;">
+						<option value="0">[--Seleccionar Empleado--]</option>
+					</select>
+				</td>
+				<td width="10"></td>
+				<td width="90">
+					<select name="busqueda_select_estado" style="width:90px;">
+						<option value="0">[--Todos--]</option>
 					</select>
 				</td>
 				
